# ecjtu-wechat-api

./: .env.example  .gitignore  README.md  build_and_install.sh  pyproject.toml
.github/workflows/: publish-testpypi.yml
src/ecjtu_wechat_api/: __init__.py  main.py
src/ecjtu_wechat_api/api/: __init__.py
src/ecjtu_wechat_api/api/routes/: __init__.py  courses.py  exams.py  scores.py
src/ecjtu_wechat_api/core/: __init__.py  config.py  exceptions.py
src/ecjtu_wechat_api/models/: __init__.py  course.py  exam.py  score.py
src/ecjtu_wechat_api/services/: __init__.py  parse_course.py  parse_score.py  parser.py
src/ecjtu_wechat_api/utils/: __init__.py  cache.py  http.py  logger.py  persistence.py
tests/: test_api.py  test_config.py  test_course_service.py  test_courses_api.py  test_exam_service.py  test_exams_api.py  test_http_client.py  test_main.py  test_parser.py  test_persistence.py  test_score_parser.py  test_scores_api.py
