[project]
name = "ecjtu-wechat-api"
version = "0.2.0"
description = "华东交通大学教务系统微信版 API"
authors = [
    { name = "mochenya" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "requests>=2.31.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecjtu_wechat_api"]
