[project]
name = "ecjtu-wechat-api"
dynamic = ["version"]
description = "华东交通大学教务系统微信版 API"
authors = [
    { name = "mochenya" },
]
readme = "README.md"

license = "MIT"
license-files = ["LICEN[CS]E*"]

requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/mochenya/ecjtu-wechat-api"
Issues = "https://github.com/mochenya/ecjtu-wechat-api/issues"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "hatch>=1.9.0",
    "hatch-vcs>=0.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# 版本管理配置
[tool.hatch.version]
source = "vcs"
fallback-version = "1.1.0"
tag-pattern = "^v(?P<version>.*)$"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

# 构建配置
[tool.hatch.build.targets.wheel]
packages = ["src/ecjtu_wechat_api"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/ecjtu_wechat_api/_version.py"

# 发布仓库配置
[tool.hatch.publish]
index = "main"

[tool.hatch.index.main]
url = "https://upload.pypi.org/legacy/"

[tool.hatch.index.test]
url = "https://test.pypi.org/legacy/"

# 环境管理
[tool.hatch.envs.default]
python = "3.12"
dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.hatch.envs.default.scripts]
check = "ruff check src"
format = "ruff format src"
test = "pytest {args:tests}"
lint = ["check", "format"]
build = "uv build"
full-check = ["lint", "test"]
